2004-12-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile (INSTALLATION_OUT_SUFFIXES): Do not try to
	install unbuildable Fontmap and Fontmap.lily (Simon Aridis-Lang).

2004-12-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(outdir)/%.otf-table): include parmesan20.lisp
	in first run as well.

	* scm/paper.scm (layout-set-staff-size): use text-font-size in
	dimension less points (ie. 12 = 12 point)

	* lily/pango-select.cc (select_pango_font): use find_scaled_font().

	* lily/all-font-metrics.cc (find_pango_font): set description_

	* lily/pango-font.cc (text_stencil): export size as well.
	(text_stencil): fix scaling and extents box.

2004-12-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.texi (Top): add -f texstr

	* Documentation/user/invoking.itely (Invoking lilypond): document
	texstr

	* scripts/convert-ly.py (conv): add ancient rules.

	* scm/clef.scm (c0-pitch-alist): replace - with .

	* scripts/lilypond-book.py (process_snippets): add texstr support.

	* scm/framework-texstr.scm (header): change extension to .textmetrics

	* lily/lily-parser.cc (parse_file): do try_load_text_metrics for
	-f tex.

	* lily/text-metrics.cc: new file.
	(try_load_text_metrics): new function

	* lily/include/text-metrics.hh: new file.

2004-12-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/lily-guile.hh (ly_lily_module_constant): rename
	ly_scheme_function to ly_lily_module_constant.

	* lily/modified-font-metric.cc (text_dimension): try
	lookup_tex_text_dimension() first.

	* lily/tfm.cc: new function ly:load-text-dimensions

2004-12-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-texstr.scm (text): use \lilygetmetrics

	* scm/framework-texstr.scm (header): dump in new format.

	* tex/lilypond-tex-metrics: new file.
	
2004-12-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/pango-font.cc (text_stencil): Quick try at glyph->charcode
	mapping.
	(index_to_charcode): New method.
