@@ -1,3 +1,10 @@
+2004-12-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* mf/GNUmakefile ($(outdir)/%.otf-table): use findstring. Fixes
+	brace generation. 
+
+	* lily/text-metrics.cc (LY_DEFINE): use scm_c_make_hash_table().
+
 2004-12-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* mf/GNUmakefile (INSTALLATION_OUT_SUFFIXES): Do not try to
